[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-vault-py"
version = "0.1.0"
description = "A secure execution layer and ERC-7579/ERC-7715 identity framework for Web3 AI agents."
readme = "README.md"
authors = [
    { name = "AgentVault Authors" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "web3>=6.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_vault*"]
exclude = ["*tests*", "*contracts*"]
